настройка intellij на работу с проектом

--- a/visualvm/profiling/nbproject/platform.properties
+++ b/visualvm/profiling/nbproject/platform.properties
@@ -16,6 +16,7 @@ enabled.clusters=\
     profiler
 nbjdk.active=default
 nbplatform.active=NetBeans Platform 6.9 RC2 (Build 100607-babd5536fc49)
-suite.dir=${basedir}
+# suite.dir=${basedir}
+suite.dir=/Users/grom/Documents/intellij/SA/visualvm_old/
 netbeans.dest.dir=${suite.dir}/netbeans
 harness.dir=${netbeans.dest.dir}/harness
