убрал график с threads

--- a/visualvm/applicationviews/src/com/sun/tools/visualvm/application/views/monitor/Bundle.properties
+++ b/visualvm/applicationviews/src/com/sun/tools/visualvm/application/views/monitor/Bundle.properties
@@ -41,7 +41,7 @@ LBL_PermGen=PermGen
 
 LBL_Classes=Classes
 
-LBL_Threads=Threads
+#LBL_Threads=Threads
 
 LBL_Perform_GC=Perform GC
 
@@ -84,17 +84,17 @@ LBL_Total_loaded_classes_leg=Total loaded classes
 
 LBL_Shared_loaded_classes_leg=Shared loaded classes
 
-LBL_Live_threads=Live
-
-LBL_Daemon_threads=Daemon
-
-LBL_Live_threads_peak=Live peak
-
-LBL_Started_threads_total=Total started
-
-LBL_Live_threads_leg=Live threads
-
-LBL_Daemon_threads_leg=Daemon threads
+#LBL_Live_threads=Live
+#
+#LBL_Daemon_threads=Daemon
+#
+#LBL_Live_threads_peak=Live peak
+#
+#LBL_Started_threads_total=Total started
+#
+#LBL_Live_threads_leg=Live threads
+#
+#LBL_Daemon_threads_leg=Daemon threads
 
 FORMAT_hms={0} hrs {1} min {2} sec
 FORMAT_ms={0} min {1} sec
