закомментировал названия для вкладки Threads (см. предыдущий коммит Ильи)

--- a/visualvm/applicationviews/src/com/sun/tools/visualvm/application/views/threads/Bundle.properties
+++ b/visualvm/applicationviews/src/com/sun/tools/visualvm/application/views/threads/Bundle.properties
@@ -22,11 +22,11 @@
 # or visit www.oracle.com if you need additional information or have any
 # questions.
 
-LBL_Threads=Threads
+#LBL_Threads=Threads
 
-LBL_Threads_visualization=Threads visualization
+#LBL_Threads_visualization=Threads visualization
 
-LBL_Thread_Dump=Thread Dump
+#LBL_Thread_Dump=Thread Dump
 
 LBL_Timeline=Timeline
 
@@ -34,8 +34,8 @@ LBL_Table=Table
 
 LBL_Details=Details
 
-LBL_Live_threads=Live threads
+#LBL_Live_threads=Live threads
 
-LBL_Daemon_threads=Daemon threads
+#LBL_Daemon_threads=Daemon threads
 
-Deadlock_Alert_Text=<b>Deadlock detected!</b><br>Take a thread dump to get more info.
+#Deadlock_Alert_Text=<b>Deadlock detected!</b><br>Take a thread dump to get more info.
