убрал настройку тредов из меню Tools - Options

--- a/visualvm/core/src/com/sun/tools/visualvm/core/options/Bundle.properties
+++ b/visualvm/core/src/com/sun/tools/visualvm/core/options/Bundle.properties
@@ -26,7 +26,7 @@ OptionsCategory_Name_Core=General
 OptionsCategory_Title_Core=VisualVM
 LBL_Monitored_Host=Monitored &Host\:
 LBL_Sec=sec.
-LBL_Threads=Thread&s\:
+#LBL_Threads=Thread&s\:
 LBL_Monitored_Data=Monitored &Data\:
 LBL_Polling=Polling
 LBL_Charts_Cache=Charts Cache
