убрал кнопку Thread dump с вкладки Sampler-CPU-CPU Samples

--- a/visualvm/sampler/src/com/sun/tools/visualvm/sampler/cpu/Bundle.properties
+++ b/visualvm/sampler/src/com/sun/tools/visualvm/sampler/cpu/Bundle.properties
@@ -38,9 +38,9 @@ LBL_Snapshot=Snapshot
 
 TOOLTIP_Snapshot=Take snapshot of collected results
 
-LBL_Thread_dump=Thread Dump
+#LBL_Thread_dump=Thread Dump
 
-TOOLTIP_Thread_dump=Take thread dump
+#TOOLTIP_Thread_dump=Take thread dump
 
 LBL_No_data=<No Data>
 
